force-app/main/default/objects/RH_Accomplishment__c/RH_Accomplishment__c.object-meta.xml
<CustomObject>
    <label>Accomplishment</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Accomplishment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accomplishments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>