force-app/main/default/objects/RH_Accomplishment__c/fields/RH_Date__c.field-meta.xml
<CustomField>
    <fullName>RH_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>