force-app/main/default/objects/RH_Accomplishment__c/fields/RH_Submiter__c.field-meta.xml
<CustomField>
    <fullName>RH_Submiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submiter</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accomplishments</relationshipLabel>
    <relationshipName>Accomplishments</relationshipName>
    <type>Lookup</type>
</CustomField>