force-app/main/default/objects/RH_Accomplishment__c/fields/RH_Title__c.field-meta.xml
<CustomField>
    <fullName>RH_Title__c</fullName>
    <label>Title</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>