force-app/main/default/objects/RH_Accomplishment__c/fields/RH_Visibility__c.field-meta.xml
<CustomField>
    <fullName>RH_Visibility__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Visibility</label>
    <type>Checkbox</type>
</CustomField>